Change get(0) to getFirst()